; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_SetScissorBoxOffset.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_SetScissorBoxOffset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_SetScissorBoxOffset(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = add nsw i32 %7, 342
  %9 = call i32 @_SHIFTR(i32 %8, i32 1, i32 24)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = add nsw i32 %10, 342
  %12 = call i32 @_SHIFTR(i32 %11, i32 1, i32 24)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @_SHIFTL(i32 %13, i32 10, i32 10)
  %15 = or i32 1493172224, %14
  %16 = load i32, i32* %5, align 4
  %17 = and i32 %16, 1023
  %18 = or i32 %15, %17
  %19 = call i32 @GX_LOAD_BP_REG(i32 %18)
  ret void
}

declare dso_local i32 @_SHIFTR(i32, i32, i32) #1

declare dso_local i32 @GX_LOAD_BP_REG(i32) #1

declare dso_local i32 @_SHIFTL(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
